// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellAccountMultiselectItem - Snapshot should render default settings correctly 1`] = `
<MultiselectItem
  isSelected={false}
  onPress={[Function]}
  style={Object {}}
  testID="cell-account-multi-select"
>
  <CellAccountContent
    avatarAccountAddress="0x2990079bcdEe240329a520d2444386FC119da21a"
    avatarAccountType="JazzIcon"
    title="Orangefox.eth"
  />
</MultiselectItem>
`;

exports[`CellAccountMultiselectItem - Snapshot should render the proper selected state 1`] = `
<MultiselectItem
  isSelected={true}
  onPress={[Function]}
  style={Object {}}
  testID="cell-account-multi-select"
>
  <CellAccountContent
    avatarAccountAddress="0x2990079bcdEe240329a520d2444386FC119da21a"
    avatarAccountType="JazzIcon"
    title="Orangefox.eth"
  />
</MultiselectItem>
`;
